# televent

./: .clippy.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .sqlxrc  API.md  BENCHMARK_NOTES.md  CLAUDE.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dioxus.toml  Dockerfile  GEMINI.md  INVITE_SYSTEM.md  Justfile  LICENSE  README.md  SECURITY.md  check_db.rs  docker-compose.yml  flake.nix  openapi.json  railway.toml  tailwind.config.js
.Jules/: palette.md  pre_commit.sh
.claude/: settings.json
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  init-firewall.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  test.yml  tokei.yml
.jules/: bolt.md  palette.md  sentinel.md
.serena/: project.yml
.serena/memories/: architecture_overview.md  codebase_audit_findings.md  database_schema_optimization_jan_2026.md  tech_stack.md  testing_status.md
.sqlx/: query-4fe636f250f1bc445e56f9164a2c0500f03145a77d077cf07b41a45b975d8524.json  query-5bcf5f32c3c6633942445e933240cce5aa745ce21d1838d641791c6ec4b08e84.json  query-64f63add7e5d6a45e5f48841e836b6079cd3421a970af970f6968dd5e152dba3.json  query-78632575da86b338de28c720a7f999a53e99453420a4d50169d88794a25bdb82.json  query-b3d9089b28a426cdf32084538253c5a71236e336c0f4c373139b0d9e280eed6e.json  query-bce53608addcff418c58948e382e4b226d35ac05301d03b1d37ccd0b1200aae3.json  query-dfab97d1218591fea499759a64772e82117307e885f8be286e1e4f9c4eb13942.json
backend/: Cargo.toml  clippy_log.txt
backend/api/: Cargo.toml  delete e2e-123.ics
backend/api/examples/: gen_hash.rs
backend/api/src/: config.rs  docs.rs  error.rs  lib.rs  main.rs  models.rs
backend/api/src/db/: events.rs  mod.rs
backend/api/src/middleware/: caldav_auth.rs  caldav_headers.rs  caldav_logging.rs  mod.rs  rate_limit.rs  security_headers.rs  telegram_auth.rs
backend/api/src/routes/: caldav.rs  caldav_ical.rs  caldav_xml.rs  calendars.rs  devices.rs  events.rs  health.rs  ical.rs  ical_debug.rs  me.rs  mod.rs
backend/api/tests/: api_coverage.rs  api_full_flow.rs  bench_caldav_put.rs  bench_sync_query.rs  caldav_full_flow.rs  caldav_integration.rs  e2e_cadaver.rs  invite_flow_test.rs  test_device_limit.rs  test_device_limit_race.rs
backend/application/: Cargo.toml
backend/application/src/: device.rs  health.rs  ical.rs  lib.rs
backend/bot/: Cargo.toml
backend/bot/src/: commands.rs  config.rs  db.rs  event_parser.rs  handlers.rs  lib.rs  main.rs
backend/bot/tests/: integration_tests.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  recurrence.rs
backend/server/: Cargo.toml
backend/server/src/: config.rs  main.rs
backend/shared/: Cargo.toml
backend/shared/src/: bootstrap.rs
backend/storage/: Cargo.toml
backend/storage/src/: calendar.rs  device.rs  health.rs  lib.rs  outbox.rs
backend/worker/: Cargo.toml
backend/worker/src/: bench_worker.rs  config.rs  db.rs  lib.rs  main.rs  processors.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  error.rs  lib.rs  main.rs
crates/api/src/db/: calendars.rs  events.rs  mod.rs  users.rs
crates/api/src/middleware/: caldav_auth.rs  caldav_headers.rs  caldav_logging.rs  mod.rs  rate_limit.rs  security_headers.rs  telegram_auth.rs
crates/api/src/routes/: caldav.rs  caldav_xml.rs  calendars.rs  devices.rs  events.rs  health.rs  ical.rs  me.rs  mod.rs
crates/api/tests/: api_full_flow.rs  bench_sync_query.rs  caldav_full_flow.rs  caldav_integration.rs  e2e_cadaver.rs  invite_flow_test.rs
crates/bot/: Cargo.toml  llvm-cov-test.sh
crates/bot/src/: commands.rs  config.rs  db.rs  dialogue.rs  event_parser.rs  handlers.rs  lib.rs  main.rs
crates/bot/tests/: integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: attendee.rs  config.rs  error.rs  lib.rs  models.rs  recurrence.rs  security.rs  timezone.rs  types.rs
crates/mailer/: Cargo.toml
crates/mailer/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: bootstrap.rs
crates/worker/: Cargo.toml
crates/worker/src/: bench_worker.rs  concurrency_bench.rs  config.rs  db.rs  lib.rs  mailer.rs  main.rs  processors.rs
docs/: ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  CURRENT_STATE_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP.md  GAP_ANALYSIS.md  MVP_BLOCKERS_AND_PLAN.md  PLAN_TO_FIX.md  README.md  TESTING_SESSION_COMPLETE.md  TODO.md  bot_commands.md  caldav_compliance.md  gdpr_procedures.md
dontuse.devcontainer/: Dockerfile  setup.sh
expert_freelancer/: App.tsx  index.css
frontend/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
migrations/: 20260118000001_create_users.sql  20260118000002_create_calendars.sql  20260118000003_create_events.sql  20260118000004_create_device_passwords.sql  20260118000005_create_outbox_messages.sql  20260118000006_create_audit_log.sql  20260118000007_create_user_preferences.sql  20260118000008_create_deleted_users.sql  20260118000009_create_audit_triggers.sql  20260118_001_create_users_table.sql  20260118_002_create_calendars_table.sql  20260118_003_create_events_table.sql  20260118_004_create_device_passwords_table.sql  20260118_005_create_outbox_messages_table.sql  20260118_006_create_audit_logs_table.sql  20260118_007_create_user_preferences_table.sql  20260120000001_add_extra_indexes.sql  20260121000001_create_event_attendees.sql  20260121000002_create_deleted_events.sql  20260121000003_index_username.sql  20260121000004_add_sync_token_to_deleted_events.sql  20260124000001_enumify_types.sql  20260125000000_init_schema.sql  20260125105800_use_telegram_id_as_primary_key.sql  20260126000000_optimize_event_time_types.sql  20260126000001_remove_deleted_support.sql  20260126100000_init.sql  20260128100000_perf_sync_index.sql  20260209180000_refactor_attendees.sql  README.md
prompts/: 001-caldav-debug-logging.md  002-caldav-read-compatibility.md  003-caldav-write-operations.md
scripts/: README.md  generate_coverage_badge.py  seed_dev_data.js  seed_dev_data.sh
verification/: verify_event_form.py  verify_event_list.py
(+104 files in other folders)
