[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/bot",
    "crates/worker",
    "crates/mailer",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Televent Team"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
chrono-english = "0.1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Security
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"

# iCalendar/CalDAV
icalendar = "0.17"
quick-xml = { version = "0.39", features = ["serialize"] }
rrule = "0.14"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Frontend
dioxus = { version = "0.5" }
dioxus-web = { version = "0.7" }
