[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/api",
    "crates/bot",
    "crates/worker",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["kirill denisov"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
dotenvy = "0.15.7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower_governor = "0.8"

# Telegram bot
teloxide = { version = "0.17", features = ["macros"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
chrono-english = "0.1"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Caching
moka = { version = "0.12", features = ["future"] }

# Security
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"

# iCalendar/CalDAV
icalendar = "0.17"
quick-xml = { version = "0.39", features = ["serialize"] }
rrule = "0.14"

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "hostname",
    "smtp-transport",
] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
