[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/api",
    "crates/bot",
    "crates/worker",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["kirill denisov"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7.18"
anyhow = "1.0.101"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.20", features = ["v4", "serde"] }
dotenvy = "0.15.7"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "cors", "fs"] }
tower_governor = "0.8.0"

# Telegram bot
teloxide = { version = "0.17", features = ["macros"] }

# Date/Time
chrono = { version = "0.4.43", features = ["serde"] }
chrono-tz = "0.10.4"
chrono-english = "0.1.8"

# Logging/Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

# Caching
moka = { version = "0.12.13", features = ["future"] }

# Utilities
tempfile = "3.24.0"
url = "2.5.8"
base64 = "0.22.1"
hex = "0.4.3"
urlencoding = "2.1.3"

# Security
argon2 = "0.5.3"
hmac = "0.12.1"
sha2 = "0.10.9"
rand = "0.9.2"

# iCalendar/CalDAV
icalendar = "0.17.6"
quick-xml = { version = "0.39.0", features = ["serialize"] }
rrule = "0.14.0"

# Email
lettre = { version = "0.11.19", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "hostname",
    "smtp-transport",
    "pool",
] }

typeshare = "1.0.5"
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Testing
serial_test = "3.3.1"
reqwest = { version = "0.13.2", features = ["json"] }
teloxide_tests = "0.4.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"

[profile.test]
opt-level = 1
debug = true
# Enable full parallelism for tests
incremental = true
