[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
autobins = false

[dependencies]
# Internal
televent-application = { path = "../application" }
televent-domain = { path = "../domain" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

# Date/Time
chrono.workspace = true

# Security
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CalDAV/iCalendar
quick-xml.workspace = true
moka.workspace = true
url.workspace = true
base64.workspace = true
hex.workspace = true
urlencoding.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
ical = "0.11.0"

[dev-dependencies]
televent-storage = { path = "../storage" }
hmac.workspace = true
rand.workspace = true
reqwest.workspace = true
sha2.workspace = true
sqlx.workspace = true
tempfile.workspace = true
