[package]
name = "televent-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
televent-domain = { path = "../domain" }
televent-storage = { path = "../storage" }

argon2.workspace = true
chrono.workspace = true
ical = "0.11.0"
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
