[package]
name = "bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "bot"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
# Internal
televent-core = { path = "../core" }
televent-shared = { path = "../shared" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Telegram bot
teloxide.workspace = true

# Database
sqlx.workspace = true

# Date/Time
chrono.workspace = true
chrono-english.workspace = true

# Logging
tracing.workspace = true

# Security
sha2.workspace = true
argon2.workspace = true
rand.workspace = true
thiserror.workspace = true

# iCalendar
icalendar.workspace = true

[dev-dependencies]
teloxide_tests.workspace = true
