[package]
name = "bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
autobins = false

[lib]
name = "bot"
path = "src/lib.rs"

[dependencies]
# Internal
televent-application = { path = "../application" }
televent-domain = { path = "../domain" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Telegram bot
teloxide.workspace = true

# Date/Time
chrono.workspace = true
chrono-english.workspace = true

# Logging
tracing.workspace = true

thiserror.workspace = true

# iCalendar

[dev-dependencies]
televent-storage = { path = "../storage" }
sqlx.workspace = true
