[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "televent"
path = "src/main.rs"

[dependencies]
# Internal crates as libraries
televent-core = { path = "../core" }
api = { path = "../api" }
bot = { path = "../bot" }
worker = { path = "../worker" }

# Core
tokio.workspace = true
anyhow.workspace = true
dotenvy.workspace = true

# Database
sqlx.workspace = true

# Telegram
teloxide.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Shutdown coordination
tokio-util.workspace = true

# Cache (for API AppState)
moka.workspace = true

# Date/Time
chrono.workspace = true
