[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
autobins = false

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
# Internal
televent-application = { path = "../application" }
televent-domain = { path = "../domain" }
televent-storage = { path = "../storage" }

# Core
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Database
sqlx.workspace = true

# Telegram bot (for notifications)
teloxide.workspace = true

# Date/Time
chrono.workspace = true

# Logging
tracing.workspace = true
