[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
televent-core = { path = "../core" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

# Database
sqlx.workspace = true

# Date/Time
chrono.workspace = true
chrono-tz.workspace = true

# Security
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CalDAV/iCalendar
icalendar.workspace = true
quick-xml.workspace = true
moka = { version = "0.12", features = ["future"] }

# Utilities
hex = "0.4"
urlencoding = "2.1"
base64 = "0.22"
dotenvy = "0.15.7"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

