[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
televent-core = { path = "../core" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

# Database
sqlx = { workspace = true, features = ["migrate"] }

# Date/Time
chrono.workspace = true
chrono-tz.workspace = true

# Security
argon2.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# CalDAV/iCalendar
icalendar.workspace = true
quick-xml.workspace = true
moka.workspace = true

# Utilities
hex = "0.4"
urlencoding = "2.1"
base64 = "0.22"
dotenvy.workspace = true
tracing-appender = "0.2.4"
url.workspace = true
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
hex = "0.4"
hmac.workspace = true
reqwest = { version = "0.13", features = ["json"] }
sha2.workspace = true
tempfile = { workspace = true }
url = { workspace = true }
