[package]
name = "bot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
televent-core = { path = "../core" }

# Core
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Telegram bot
teloxide.workspace = true

# Database
sqlx.workspace = true

# Date/Time
chrono.workspace = true
chrono-tz.workspace = true
chrono-english.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Security
sha2.workspace = true
argon2.workspace = true
rand.workspace = true
dotenvy.workspace = true
