[package]
name = "televent-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tracing.workspace = true

# Database
sqlx.workspace = true

# iCalendar/Recurrence
rrule.workspace = true
