[package]
name = "mailer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core
tokio.workspace = true
anyhow.workspace = true

# Email
lettre.workspace = true

# Logging
tracing.workspace = true
# Core
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Email
lettre.workspace = true

# Logging
tracing.workspace = true
