[package]
name = "televent-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
televent-core = { path = "../core" }
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
chrono.workspace = true
