[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "worker"
path = "src/lib.rs"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
# Internal
televent-core = { path = "../core" }

# Core
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Email
lettre.workspace = true

# Database
sqlx.workspace = true

# Telegram bot (for notifications)
teloxide.workspace = true

# Date/Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
